Bug 1014377 - Convert the first quarter of MFBT to Gecko style. r=froydnj.